# posixmq

./: .cirrus.yml  Cargo.toml
examples/: limits.rs  merge.rs  receive.rs  rm.rs  send.rs  sort.rs
src/: lib.rs
src/mio/: mio_06.rs  mio_07.rs  mio_08.rs  mio_1.rs  mod.rs
tests/: basics.rs  fd.rs  names.rs  os_errors.rs  timed.rs
